--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/lodash": "^4.14.44",
+    "angular2-materialize": "^6.3.0",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "jquery": "^2.2.4",
+    "lodash": "^4.17.3",
+    "materialize-css": "^0.97.8",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
